# STAREPandas

./: .coverage  .gitattributes  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  temporal.ipynb  tox.ini
.github/workflows/: pypi.yml  python-app.yml  testrunner.yml
doc/source/: about.rst  conf.py  index.rst
doc/source/docs/: reference.rst
doc/source/docs/reference/: io.rst  stare_conversions.rst  staredataframe.rst  temporal_conversions.rst  tools.rst  trixel_conversions.rst
doc/source/examples/: catalog.rst  index.rst
doc/source/reference/: reference.rst  stare_conversions.rst  staredataframe.rst
doc/source/reference/api/: starepandas.STAREDataFrame.rst  starepandas.STAREDataFrame.set_stare.rst  starepandas.STAREDataFrame.stare.rst  starepandas.STAREDataFrame.trixels.rst
docs/source/: conf.py  index.rst  requirements.txt
docs/source/_static/: style.css
docs/source/docs/: reference.rst
docs/source/examples/: index.rst
examples/: .gitignore  VIIRS.ipynb  VNP02DNB.ipynb  XX-UserSpecifiedGranuleLoader.ipynb  antimeridian.ipynb  catalog.ipynb  catalogue.ipynb  dask_df.ipynb  dissolve.ipynb  ellipses.ipynb  enclaves.ipynb  find_companions.ipynb  geoTIFF.ipynb  granules.ipynb  indidivdual_geoms.ipynb  individual_geoms.ipynb  instantiation.ipynb  intersection.ipynb  intersects.ipynb  landsat.ipynb  manual_join.ipynb  parallel.ipynb  plotting.ipynb  poly_issue.ipynb  profile_granule_read.py  pystare_intersects.ipynb  read_granules.ipynb  read_xcal.ipynb  shapely20.ipynb  sid_levels.ipynb  sid_resolution.ipynb  spatial_relations.ipynb  split_antimeridian.ipynb  stare_join.ipynb  stare_manipulations.ipynb  stare_questions.ipynb  staremaster.ipynb  temporal.ipynb  to_database.ipynb  user_defined_granule_loader.ipynb  (+1 more)
examples/data/: MOD05_L2.A2005349.2125.061.2017294065400_stare.nc  MOD05_L2.A2020254.1320.061.2020255013126_stare.nc  catalogue.sqlite  test.sqlite
examples/data/sidecars/: MOD05_L2.A2019336.0000.061.2019336211522.hdf  MOD05_L2.A2019336.0000.061.2019336211522_stare.nc  MOD05_L2.A2019336.0005.061.2019336211849.hdf  MOD05_L2.A2019336.0005.061.2019336211849_stare.nc
starepandas/: __init__.py  _version.py  staredataframe.py  stareseries.py
starepandas/datasets/: MOD05_L2.A2019336.0000.061.2019336211522_stare.nc  MODXX.hdf  MODXX_stare.nc  VNP02DNB.A2020219.0742.001.2020219125654.nc  VNP03DNB.A2020219.0742.001.2020219124651.nc  VNP03DNB.A2020219.0742.001.2020219124651_stare.nc  VNP03MOD.A2020219.0742.001.2020219124651.nc  __init__.py
starepandas/io/: __init__.py  database.py  file.py  folder.py  geotiff.py  pod.py  postgis.py  s3.py
starepandas/io/granules/: __init__.py  atms.py  granule.py  imergl3.py  modis.py  ssmis.py  viirsl2.py
starepandas/pystare/: __init__.py  pystare.py
starepandas/tools/: __init__.py  spatial_conversions.py  stare_conversions.py  stare_join.py  temporal_conversions.py  trixel_conversions.py
tests/: test_catalog.py  test_ccw.py  test_dissolve.py  test_enclaves.py  test_geotiff.py  test_guess_companion_path.py  test_instantiation.py  test_intersects.py  test_join.py  test_na.py  test_parallel.py  test_plotting.py  test_readgranules.py  test_shapely20.py  test_trixels.py  test_type_persistance.py  world.pkl
tests/data/: mcms_merra2_npac_2017_usi_tagrp_niklas.pkl  wind.tif
tests/data/catalog/: MOD05_L2.A2005349.2125.061.2017294065400_stare.nc  MOD05_L2.A2019336.0000.061.2019336211522_stare.nc  MOD05_L2.A2020254.1320.061.2020255013126_stare.nc
tests/data/granules/: MOD05_L2.A2019336.0000.061.2019336211522.hdf  VNP09.A2022308.1930.001.2022309070407.hdf
(+50 files in other folders)
