[versioneer]
VCS = git
style = pep440
versionfile_source = starepandas/_version.py
versionfile_build = starepandas/_version.py
tag_prefix = v
parentdir_prefix = starepandas


[metadata]
name = starepandas
description = STARE pandas extensions
author = Niklas Griessbaum
author_email = griessbaum@ucsb.edu
url = https://github.com/SpatioTemporal/STAREPandas
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/SpatioTemporal/STAREPandas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.21
    geopandas>=0.10
    pandas>=1.3
    dask
    pystare>=0.8.4
    h5py
    pyhdf
    netCDF4
    boto3
    astropy
    matplotlib
include_package_data = True

[options.package_data]
starepandas.datasets =  '*.hdf', '*.nc'
