[versioneer]
VCS = git
style = pep440
versionfile_source = starepandas/_version.py
versionfile_build = starepandas/_version.py
tag_prefix = v
parentdir_prefix = starepandas


[metadata]
name = starepandas
description = STARE pandas extensions
author = Niklas Griessbaum
author_email = griessbaum@ucsb.edu
url = https://github.com/SpatioTemporal/STAREPandas
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/SpatioTemporal/STAREPandas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.22
    geopandas>=0.10
    shapely>=1.8
    pandas>=1.4
    dask>=2022.9.0
    distributed>=2022.9.0
    pystare>=0.8.7
    h5py>=3.7.0
    pyhdf>=0.10.5
    netCDF4>=1.5.8
    boto3>=1.23.10
    astropy>=5.1
    matplotlib>=3.5.2
    rasterio>=1.3.0
    xarray>=2022.6.0
    rtree>=1.0.0
    scipy>=scipy-1.9.1
    sqlalchemy>=1.4.41
    puremagic



include_package_data = True

[options.package_data]
starepandas.datasets =  '*.hdf', '*.nc'
